sandbox/output
TicketDispenserTest.java:37: error: cannot find symbol
        int turnNumber = dispenser.getTurnTicket().getTurnNumber();
                         ^
  symbol:   variable dispenser
  location: class TicketDispenserTest
1 error
